<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gilberttherry.alpro.list">
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/lista"
        android:layout_height="wrap_content"
        android:text="@string/list1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/title1"
        android:layout_height="wrap_content"
        android:layout_below="@id/lista"
        android:hint="@string/pass1"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/listb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title1"
        android:text="@string/list2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listb"
        android:hint="@string/pass1"
        android:padding="10dp"
        android:id="@+id/deadline"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list3"
        android:layout_below="@id/deadline"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/listc"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/listc"
        android:id="@+id/memo"
        android:padding="10dp"
        android:hint="@string/pass1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/memo"
        android:text="@string/list4"
        android:textStyle="bold"
        android:id="@+id/listd"
        android:layout_marginBottom="20dp"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listd">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioritas1"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioritas2"
            android:textSize="20sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioritas3"
            android:textSize="20sp"
            android:textStyle="italic"/>
    </RadioGroup>
</RelativeLayout>

